--- a/index.html
+++ b/index.html
@@ -10,10 +10,22 @@
     <title>Hello world</title>
 </head>
 <body>
+    <div class="header">
+        <span class="title">Georgeluque.com</span>
+    </div>
     <div class="main_container">
-            <p class="title">
-                    Hello world
-                </p>
+            <div class="main_post">
+                    <h2 class="post_title">
+                            Hello world
+                    </h2>
+                    <p class="post_lead">
+                        This is the first entry of my disgustingly ambitious project :-)
+                    </p>
+                    <div class="post_footer">
+                            <span class="post_author">@Jorge Luque</span>
+                            <span class="post_date">on 27 Feb 2021</span>
+                        </div>
+            </div>
     </div>
 </body>
 </html>
