Add subheader with photo

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <div class="header">
         <span class="title">Georgeluque.com</span>
     </div>
+    <div class="subheader">
+            <img src="assets/myself.jpg" alt="">  
+        <span class="logo_text">Doing big things</span> 
+     </div>
+
+    </div>
     <div class="main_container">
             <div class="main_post">
                     <h2 class="post_title">
