--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="subheader">
             <img src="assets/myself.jpg" alt="">  
-        <span class="logo_text">Doing big things</span> 
+        <p class="logo_text">Doing <span class="hightlight">big</span> things</p> 
      </div>
 
     </div>
